--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@ lib_deps =
 
 
 [env:ShineWifiX]
-platform = https://github.com/platformio/platform-espressif8266.git
+platform = espressif8266@4.2.1
 board = esp07s
 framework = arduino
 lib_ldf_mode = deep+
@@ -43,7 +43,7 @@ build_flags =
     "-D ENABLE_AP_BUTTON=1"
 
 [env:ShineWifiS]
-platform = https://github.com/platformio/platform-espressif8266.git
+platform = espressif8266@4.2.1
 board = esp12e
 framework = arduino
 lib_ldf_mode = deep+
@@ -56,7 +56,7 @@ build_flags =
     "-D ENABLE_AP_BUTTON=1"
 
 [env:d1]
-platform = https://github.com/platformio/platform-espressif8266.git
+platform = espressif8266@4.2.1
 board = d1
 framework = arduino
 lib_ldf_mode = deep+
