--- a/platformio.ini
+++ b/platformio.ini
@@ -81,7 +81,7 @@ build_flags =
 
 [env:lolin32]
 platform = espressif32
-board = lolin32
+board = lolin32_lite
 framework = arduino
 board_build.filesystem = littlefs
 lib_deps =
