Further ESP32 adaptations

--- a/platformio.ini
+++ b/platformio.ini
@@ -81,7 +81,7 @@ build_flags =
 
 [env:lolin32]
 platform = espressif32
-board = lolin32
+board = lolin32_lite
 framework = arduino
 board_build.filesystem = littlefs
 lib_deps =
@@ -89,3 +89,5 @@ lib_deps =
 lib_ignore=LittleFS_esp32
 build_flags = 
     ${env.build_flags}
+    "-D ENABLE_AP_BUTTON=0"
+
