Adapt to compile with espressif32@6.12.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -80,7 +80,7 @@ build_flags =
     ${env.build_flags}
 
 [env:lolin32]
-platform = espressif32
+platform = espressif32@6.12.0
 board = lolin32_lite
 framework = arduino
 board_build.filesystem = littlefs
